<resources>
    <string name="app_name">TRAILguide</string>
    <string name="category_background">category background</string>
    <string name="final_project">This app is built as a Final Project for the</string>
    <string name="beginner_track">Devslopes Android Beginner Track</string>
    <string name="artwork_supplied_by">Artwork supplied By: </string>
    <string name="artwork_contributors">Vectors Market\nAnbileru Adaleru\nAndrejs Kirma\nSahua D\nLes vieux garçons</string>
    <string name="vectors_market">Vectors Market</string>
    <string name="anbileru_adaleru">Anbileru Adaleru</string>
    <string name="andrejs_kirma">Andrejs Kirma</string>
    <string name="back_to_the_app">Back to the App</string>
    <string name="devslopes_logo">Devslopes logo</string>
    <string name="hamburger_button">hamburger button</string>
    <string name="item_image">item image</string>
    <string name="see_on_amazon">See on Amazon</string>
    <string name="item_detail_string_item_image">Item detail @string/item_image</string>
    <string name="sahua_d">Sahua D</string>
    <string name="les_vieux_garcons">Les vieux garçons</string>
    <string name="category_header">%s GEAR</string>
</resources>
